<resources>
    <string name="app_name">Gramophone</string>
    <string name="please_select_language">Please select a language</string>
    <string name="select_language_eng">English</string>
    <string name="select_language_hi">हिन्दी</string>
    <string name="select_language_marathi">मराठी</string>
    <string name="select_language_gujarati">ગુજરાતી</string>
    <string name="profile_screen_title">Your account is ready</string>
    <string name="profile_screen_msg">Just fill below details to go</string>
    <string name="select_profile_type">Please select your profile type</string>
    <string name="i_m_a_trader">I\'m a Trader</string>
    <string name="i_m_a_farmer">I\'m a Farmer</string>
    <string name="image" translatable="false">image</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="view_all">View All</string>
    <string name="mandi_rates">Mandi Rates</string>
    <string name="shop_by_crops">Shop by Crops</string>
    <string name="shop_by_store">Shop by Store</string>
    <string name="gramophone_exclusive">Gramophone Exclusive</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="pickup_where_you_left">Pickup where you left</string>
    <string name="products_in_your_cart">Products in your cart</string>
    <string name="new_articles">New Articles</string>
    <string name="popular_products_in_indore">Popular Products in Indore</string>
    <string name="home">Home</string>
    <string name="vyapar">Vyapar</string>
    <string name="community">Community</string>
    <string name="me">Me</string>
    <string name="back">Back</string>
    <string name="cart">Cart</string>
    <string name="cart_empty_msg">Looks like you haven\'t added\nanything to your cart yet</string>
    <string name="cart_empty_title">Your Cart is Empty</string>
    <string name="expert_advice">Expert Advice</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="share">Share</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="packing">Packing</string>
    <string name="available_offers">Available Offers</string>
    <string name="how_to_use">How to use</string>
    <string name="estimated_delivery">Estimated Delivery</string>
    <string name="product_details">Product Details</string>
    <string name="view_full_product_detail">View Full Product Detail</string>
    <string name="related_products">Related Products</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="welcome_msg">Welcome to Gramophone</string>
    <string name="start_msg">TIP: Use your whatsapp number for notification</string>
    <string name="enter_mobile_lebel">Enter Mobile Number</string>
    <string name="policy_txt">By Continue you agree to our</string>
    <string name="policy">Policy</string>
    <string name="submit">Submit</string>
    <string name="changeno">Change No.</string>
    <string name="connected">Stay Connected</string>
    <string name="connected_sub_msg"><![CDATA[Get best agriculture techniques Connect with Agri Experts & Farmers]]></string>
    <string name="delivery_sub_msg"><![CDATA[Buy best quality seeds, crop protection, crop nutrition & agri equipments]]></string>
    <string name="delivery">Deliver on your doorstep</string>
    <string name="midea">Get Latest Updates</string>
    <string name="midea_sub_msg"><![CDATA[Get weather updates, mandi prices & other agriculture news at one place]]></string>
    <string name="finish">FINISH</string>
    <string name="_continue">Continue</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="login">Login</string>
    <string name="eng">Eng</string>
    <string name="terms">Terms</string>
    <string name="and"><![CDATA[&]]></string>
    <string name="otp_hint">"Enter 6 Digit code we have sent on "</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="resend_otp">"Getting OTP via %1$s, Resend in "</string>
    <string name="privacy">Privacy Policy</string>
    <string name="talk_to_customer_care">Talk to our customer care executive</string>
    <string name="call_now">Call Now</string>
    <string name="apply_referral">Apply Referral Code</string>
    <string name="terms_n_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="get_help_call">Get Help via Call</string>
    <string name="apply">Apply</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="have_referral">Do you have referral code?</string>
    <string name="select_language">Select your Language</string>
    <string name="enter_referral_code">Enter Referral code</string>
    <string name="enter_referral_code_hint">Enter referral code</string>
    <string name="help">Help</string>
    <string name="get_help">Get Help</string>
    <string name="ratingandreviews"><![CDATA[Rating & Reviews]]></string>
    <string name="select_state">Select your state</string>
    <string name="other">Other</string>
    <string name="select_state_error">Please select state</string>
    <string name="_state">Select State</string>
    <string name="complete_address">Share your complete address</string>
    <string name="get_apporopriate_solution">To get more accurate solution</string>
    <string name="change">Change</string>
    <string name="_district">District</string>
    <string name="_tahsil">Tehsil</string>
    <string name="_village">Village</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="go_to_app">Go to the app</string>
    <string name="state_required">Please select state</string>
    <string name="district_required">Please enter your district name.</string>
    <string name="tehsil_required">Please enter your tehsil name.</string>
    <string name="pincode_required">Please enter a valid 6 disit pincode.</string>
    <string name="village_required">Please enter your village name</string>
    <string name="address_required">Please enter your address</string>
    <string name="some_thing_went_wrong">Something went wrong</string>
    <string name="network_failure">Network failure</string>
    <string name="space">" "</string>
    <string name="ensureyoutubeversioninstalled">Kindly make sure that your device has running version of YouTube installed</string>
    <string name="key_points">Key Points</string>
    <string name="showmore">Show more</string>
    <string name="showless">Show less</string>
    <string name="farmers">Farmers</string>
    <string name="delivery_">Delivery-</string>
    <string name="nointernet">No Internet Available</string>
    <string name="ratethisproduct">Rate this product</string>
    <string name="yourratingmatters">Your rating matters here will help other farmers to make better buying choices</string>
    <string name="nothappy">Not Happy</string>
    <string name="veryhappy">Very Happy</string>
    <string name="basedon">Based on</string>
    <string name="reviews">reviews</string>
    <string name="outoffive">Out of 5</string>
    <string name="top_reviews">Top reviews</string>
    <string name="offer_detail">Offer Detail</string>
    <string name="view_detail">View Detail</string>
    <string name="offers_tnc"><![CDATA[Offer Terms & Conditions]]></string>
    <string name="redemption_steps">Redemption steps:</string>
    <string name="writeareview">Write a review</string>
    <string name="share_your_experience">Share your product experience with everyone</string>
    <string name="ratings">Ratings</string>
    <string name="onlyGenuineBuyerCanRate">Only genuine buyer can rate this product</string>
    <string name="gramophone_allows_disclaimer">Gramophone only allows certified buyers to rate the product for your better shopping experience.</string>
    <string name="no_internet">No internet connection</string>
    <string name="sku">SKU:&#160;</string>
    <string name="offers_applied">&#160;Offers applied</string>
    <string name="rupee_symbol_with_space">\u20B9&#160;</string>
    <string name="rupee">\u20B9</string>
    <string name="minus_rupee_symbol">-\u20B9&#160;</string>
    <string name="save_extra_rupees">Save extra \u20B9</string>
    <string name="using">&#160;using&#160;</string>
    <string name="gram_cash">&#160;Gram Cash</string>
    <string name="gram_cash_without_extra_space">Gram Cash</string>
    <string name="items_in_your_cart">Items in your cart (</string>
    <string name="close_parenthesis">)</string>
    <string name="open_parenthesis">(</string>
    <string name="details">Details</string>
    <string name="hash_sign">#</string>
    <string name="slash_sign">&#160;/&#160;</string>
    <string name="items">&#160;Items</string>
    <string name="order_status">Order Status</string>
    <string name="order">Order&#160;</string>
    <string name="select">Select</string>
    <string name="unable_to_get_number">Unable to get phone number</string>
    <string name="referral_code">"Referral Code "</string>
    <string name="applied">" Applied"</string>
    <string name="refer_n_earn">Refer and Earn</string>
    <string name="invite_and_earn">Invite your friends and earn ...</string>
    <string name="order_desc">All yours orders will be managed here</string>
    <string name="tv">Gramophone TV</string>
    <string name="settings">Settings</string>
    <string name="manage_settings">Manage your app settings here</string>
    <string name="tools">TOOLS</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="opt_in">Whatsapp opt-in</string>
    <string name="app_tour">App Tour</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="more">More</string>
    <string name="app_feature">App Features</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="save_language">Save Language</string>
    <string name="offers">Offers</string>
    <string name="share_app">Share App</string>
    <string name="app_url" translatable="false"><![CDATA[https://play.google.com/store/apps/details?id=agstack.gramophone&hl=en_IN&gl=US]]></string>
    <string name="share_app_link">Share App link!</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="whatsapp_in">Whatsapp opt-in</string>
    <string name="whatsapp_update">Get updates over Whatsapp</string>
    <string name="recieve_del">Receive delivery updates and reminders from Gramophone with WhatsApp, Feel free to contact us too!</string>
    <string name="unblock">Unblock</string>
    <string name="payment_method">Payment Method</string>
    <string name="product">Products&#160;(</string>
    <string name="price_open_bracket">Price (</string>
    <string name="price_close_bracket">&#160;Items)</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="dialing_code">+91&#160;</string>
    <string name="ok">OK</string>
    <string name="no_thanks">No Thanks</string>
    <string name="turn_on_device_location">To continue, turn on device location, which uses Googles’s location services</string>
    <string name="your_device_will_need_to">Your device will need to:</string>
    <string name="use_gps_wi_fi">Use GPS, Wi-Fi, cell networks, and sesnsors</string>
    <string name="use_google_s_location_service">Use Google\'s location service; as part of this service, Google may collect location data periodically and use this data in an anonymous way to improve location accuracy and location-based services.</string>
    <string name="for_details_go_to_the_location_settings">For details, go to the location settings.</string>
    <string name="my_gramophone">My Gramophone</string>
    <string name="no_internet_msg">There seems to be no internet connection. Try checking things out</string>
    <string name="retry">Retry</string>
</resources>