<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="agstack.gramophone.ui.home.view.fragments.market.MarketFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="agstack.gramophone.ui.home.view.fragments.community.CommunityFragment"
        android:label="@string/community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="agstack.gramophone.ui.home.view.fragments.profile.ProfileFragment"
        android:label="@string/my_gramophone"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_trade"
        android:name="agstack.gramophone.ui.home.view.fragments.trading.TradeFragment"
        android:label="@string/trade"
        tools:layout="@layout/fragment_trade" />
</navigation>