<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_medium"
        android:lineSpacingExtra="5sp"
        android:text="@string/turn_on_device_location"
        android:textColor="@color/location_permission_title"
        android:textSize="16sp"
        android:translationY="-2.62sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/manrope_medium"
        android:gravity="center_vertical"
        android:lineSpacingExtra="10sp"
        android:text="@string/your_device_will_need_to"
        android:textColor="@color/location_permission_title"
        android:textSize="12sp"
        android:translationY="-4.97sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gps_blue" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:fontFamily="@font/manrope_medium"
            android:lineSpacingExtra="0sp"
            android:text="@string/use_gps_wi_fi"
            android:textColor="@color/location_permission_title"
            android:textSize="12sp"
            android:translationY="-0.17sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="top"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_google_blue" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:fontFamily="@font/manrope_medium"
            android:lineSpacingExtra="0sp"
            android:text="@string/use_google_s_location_service"
            android:textColor="@color/location_permission_title"
            android:textSize="12sp"
            android:translationY="-0.17sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/manrope_medium"
        android:gravity="center_vertical"
        android:lineSpacingExtra="0sp"
        android:text="@string/for_details_go_to_the_location_settings"
        android:textColor="@color/location_permission_title"
        android:textSize="12sp"
        android:translationY="-0.17sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_26sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNoThanks"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_16sdp"
            android:fontFamily="@font/manrope_bold"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:lineSpacingExtra="0sp"
            android:text="@string/no_thanks"
            android:textColor="@color/order_dispatched_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvOk"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/manrope_bold"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:lineSpacingExtra="0sp"
            android:text="@string/ok"
            android:textColor="@color/order_dispatched_text"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>