<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="parent"
        layout="@layout/toolbar_with_logo_in_center"
        />

    <View
        android:id="@+id/toolbar_separator"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#F2F4F7"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>



    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/toolbar_separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_31sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/heading_title_bold_large"
            android:text="@string/welcome_msg"
            android:textColor="@color/brand_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/small"
            android:text="@string/start_msg"
            android:layout_marginTop="@dimen/_4sdp"
            android:textColor="@color/grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/small"
            android:text="@string/enter_mobile_lebel"
            android:layout_marginTop="@dimen/_22sdp"
            android:textColor="@color/blakish"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/mute_grey"
            android:layout_marginTop="@dimen/_5sdp"
            android:letterSpacing=".05"
            android:textSize="@dimen/_14ssp"
            android:text="9749739794"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/mini"
        android:text="@string/policy"
        android:gravity="center"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/submitBtn"/>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/submit"
        android:gravity="center"
        android:padding="@dimen/_13sdp"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="@drawable/btn_rounded_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"/>
</androidx.constraintlayout.widget.ConstraintLayout>